[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Game over BG.png" type="Texture" id=1]
[ext_resource path="res://assets/Main Menu GO button.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/PLAY pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/PLAY button.png" type="Texture" id=5]
[ext_resource path="res://GameOver.gd" type="Script" id=6]
[ext_resource path="res://assets/Main Menu GO pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/Sounds/ButtonClick.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Container" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 260.0
margin_right = -90.0
margin_bottom = -260.0
texture = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 98.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 304.0
margin_bottom = 200.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 98.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="Main Menu" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 98.0
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
